# SimMIM

./: main_simmim.py  pyproject.toml
simmim/data/: data_simmim.py
