[tool.poetry]
name = "simmim"
version = "0.1.0"
description = ""
authors = ["Microsoft"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyyaml = "^6.0"
scipy = "^1.10.1"
termcolor = "^2.2.0"
timm = "^0.4.12"
yacs = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
